chore: update GitHub token usage in workflows and add debug logging for deployment association

--- a/.github/actions/surge/action.yml
+++ b/.github/actions/surge/action.yml
@@ -59,6 +59,7 @@ runs:
           const repo = context.repo.repo;
           const sha = context.sha;
           const ref = context.ref; // Use the branch ref for deployment association
+          console.log('DEBUG: context.ref =', ref); // Debug log for troubleshooting
           const deploymentUrl = `https://auro-formkit-${component}-${prNumber}.surge.sh`;
           const environmentName = `${component} demo - PR ${prNumber}`;
           
