feat: add new layout for expanded search widget

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "MMDD",
         "MMYY",
         "nocheckmark",
+        "ondark",
         "texticon",
         "YYMM",
         "YYYYDDMM"
