refactor: update layouts for dropdown versions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "autocorrect",
         "bibtemplate",
         "borderless",
+        "boxshadow",
         "csspart",
         "DDMM",
         "describedby",
