--- a/.github/actions/check-commits/action.yml
+++ b/.github/actions/check-commits/action.yml
@@ -11,7 +11,8 @@ runs:
   using: "composite"
   steps:
     - uses: actions/checkout@v4
-      if: ${{ github.action_repository != github.repository }}
+      with:
+        fetch-depth: 0 # Fetch all history for all branches and tags
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
