--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,11 @@ on:
     branches:
       - 'rc/**'
       - 'main'
-
+permissions:
+  contents: read
+  deployments: write
+  issues: write
+  pull-requests: write
 jobs:
   build:
     name: Build
