chore: update GITHUB_TOKEN reference in check-commits action and enhance release workflow checkout step

--- a/.github/actions/check-commits/action.yml
+++ b/.github/actions/check-commits/action.yml
@@ -31,3 +31,5 @@ runs:
     - name: Auro Check Commits
       run: npx --package=@aurodesignsystem/auro-cli -- auro cc -l -d
       shell: bash
+      env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
