chore: update GITHUB_TOKEN references to use secrets.GH_TOKEN in workflows

--- a/.github/workflows/add-project.yml
+++ b/.github/workflows/add-project.yml
@@ -14,4 +14,4 @@ jobs:
           # You can target a project in a different organization
           # to the issue
           project-url: https://github.com/orgs/AlaskaAirlines/projects/19
-          github-token: ${{ secrets.ACCESS_TOKEN }}
+          github-token: ${{ secrets.GH_TOKEN }}
