--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,18 +37,8 @@ jobs:
         with:
           os: ubuntu-latest
           node-version: ${{ matrix.node-version }}
-  check-commits:
-    name: Check Commits
-    needs: [build, test]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/check-commits
-        with:
-          os: ubuntu-latest
-          node-version: 22
-          github-token: ${{ secrets.GH_TOKEN }}
   release:
+    if: github.event_name == 'push'
     name: Release
     runs-on: ubuntu-latest
     needs: [build, test]
@@ -61,7 +51,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-            fetch-depth: 0
+          fetch-depth: 0
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -69,7 +59,6 @@ jobs:
       - name: Setup cache
         uses: actions/cache@v4
         id: build_cache
-
         with:
           path: ./*
           key: build-${{ github.sha }}-22
