--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,7 @@ on:
       - 'rc/**'
       - 'main'
 permissions:
+  actions: read
   contents: read
   deployments: write
   issues: write
@@ -43,6 +44,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build, test]
     permissions:
+      actions: read
       contents: write # to be able to publish a GitHub release
       issues: write # to be able to comment on released issues
       pull-requests: write # to be able to comment on released pull requests
