--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
       contents: write # to be able to publish a GitHub release
       issues: write # to be able to comment on released issues
       pull-requests: write # to be able to comment on released pull requests
-      id-token: write # to enable use of OIDC for npm provenance
+      id-token: write # to enable use of OIDC for npm provenance      
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -58,13 +58,18 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Setup cache
         uses: actions/cache@v4
         id: build_cache
         with:
           path: ./*
           key: build-${{ github.sha }}-22
-      - name: Semantic release
+      - name: Install dependencies
+        run: npm clean-install
+      - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
