--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -61,11 +61,13 @@ jobs:
           with:
             node-version: 22
             registry-url: 'https://registry.npmjs.org'
-        - name: Setup cache
+        - name: Restore dist/demo directories to cache
           uses: actions/cache@v4
           id: build-ubuntu-latest-node-v22
           with:
-            path: ./*
+            path: |
+              ./components/**/dist
+              ./components/**/demo
             key: build-${{ github.sha }}-22
         - name: Generate PR release version
           run: npx --package=@aurodesignsystem/auro-cli -- auro pr-release -p ${{ github.event.pull_request.number }}
@@ -118,11 +120,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-      - name: Setup cache
+      - name: Restore dist/demo directories to cache
         uses: actions/cache@v4
         id: build_cache
         with:
-          path: ./*
+          path: |
+            ./components/**/dist
+            ./components/**/demo
           key: build-${{ github.sha }}-22
       - name: Deploy ${{ matrix.component }} demo
         uses: "./.github/actions/surge"
