chore: add node_modules to cache paths in build and workflow files

--- a/.github/actions/check-commits/action.yml
+++ b/.github/actions/check-commits/action.yml
@@ -27,6 +27,8 @@ runs:
         path: |
           ./components/**/dist
           ./components/**/demo
+          ./components/**/node_modules
+          ./node_modules
         key: build-${{ github.sha }}-${{ inputs.node-version }}
     - name: Ensure Git is installed
       run: |
