--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,6 +65,8 @@ jobs:
           path: |
             ./components/**/dist
             ./components/**/demo
+            ./components/**/node_modules
+            ./node_modules
           key: build-${{ github.sha }}-22
       - name: Release
         env:
