--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -68,6 +68,8 @@ jobs:
             path: |
               ./components/**/dist
               ./components/**/demo
+              ./components/**/node_modules
+              ./node_modules
             key: build-${{ github.sha }}-22
         - name: Generate PR release version
           run: npx --package=@aurodesignsystem/auro-cli -- auro pr-release -p ${{ github.event.pull_request.number }}
@@ -127,6 +129,8 @@ jobs:
           path: |
             ./components/**/dist
             ./components/**/demo
+./components/**/node_modules
+./node_modules
           key: build-${{ github.sha }}-22
       - name: Deploy ${{ matrix.component }} demo
         uses: "./.github/actions/surge"
